BUG調整以及修復測試